Add work changes

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -14,6 +14,25 @@
 	alias = config --get-regexp ^alias\\.
 	save = stash --include-untracked
 	rcont = rebase --continue
+	cont = town continue
+	sw = town switch
+	append = town append
+	compress = town compress
+	contribute = town contribute
+	diff-parent = town diff-parent
+	hack = town hack
+	delete = town delete
+	observe = town observe
+	park = town park
+	prepend = town prepend
+	propose = town propose
+	rename = town rename
+	repo = town repo
+	set-parent = town set-parent
+	ship = town ship
+	sync = town sync
+	up = town up
+	down = town down
 [push]
 	default = current
 [pull]
